--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 /* vh means visual hight, vw means visual width.  */
 .banner-left{
     flex: 1;
-    color: white;
+    color: #fff;
     display: flex;
     align-items: center;
 }
@@ -32,6 +32,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 .banner-title{
     font-size: 60px;
     white-space: nowrap;
@@ -64,13 +65,16 @@ body{
     background-color: transparent;
     color: #22bedd;
 }
+
 @keyframes typing {
-    0%{
+    0% {
         content: 'P|';
     }
-    4%{
+
+    4% {
         content: 'Pr|';
     }
+
     8% {
         content: 'Pro|';
     }
@@ -199,4 +203,108 @@ body{
     100% {
         content: '|';
     }
+}
+.banner-right img{
+    border: 4px solid #22bedd;
+}
+.section-title{
+    text-align: center;
+}
+.section-title h1{
+    color: #22bedd;
+    font-size: 40px;
+    margin: 50px 0;
+    border-left: 3px solid #22bedd;
+    border-right: 3px solid #22bedd;
+    display: inline-block;
+    padding:0 10px;
+    line-height: .8;
+}
+.gallery{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+.photo{
+    height: 280px;
+    width: 280px;
+    position: relative;
+    overflow: hidden;
+}
+.photo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.border{
+    background-color: #fff;
+    position: absolute;
+    transition: .7s ease-in-out;
+}
+.border.top, .border.bottom{
+    height: 4px;
+    width: 270px;
+}
+.border.left, .border.right{
+    height: 270px;
+    width: 4px;
+}
+.border.top{
+    top: 5px;
+    right: 100%;
+}
+.border.bottom{
+    bottom: 5px;
+    left: 100%;
+}
+.border.left{
+    left: 5px;
+    top: 100%;
+}
+.border.right{
+    right: 5px;
+    bottom: 100%;
+}
+.photo:hover .border.top{
+    right: 5px;
+}
+.photo:hover .border.bottom{
+    left: 5px;
+}
+.photo:hover .border.left{
+    top: 5px;
+}
+.photo:hover .border.right{
+    bottom: 5px;
+}
+
+.photo-content{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    padding-left: 30px;
+    bottom: 0;
+    left: 0;
+    transform: translateY(400px);
+    transition: .3s ease-out;
+}
+.photo:hover .photo-content{
+    transform: translateY(200px);
+}
+.photo::before{
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    top: 0;
+    left: 0;
+    transition: .3s linear;
+}
+.photo:hover::before{
+    opacity: 1;
 }
